test/modules/shadowing/issue-19167-3-f.good
issue-19167-3-f.chpl:13: In function 'main':
issue-19167-3-f.chpl:14: error: ambiguous call 'f()'
issue-19167-3-f.chpl:7: note: candidates are: f()
issue-19167-3-f.chpl:2: note:                 f()
