test/modules/shadowing/issue-19167-3-f.chpl
module A {
  proc f() { writeln("A.f"); }
}

module CUseA {
  public use A;
  proc f() { writeln("C.f"); }
}

module Program {
  use CUseA;

  proc main() {
    f();
  }
}
